fixes #10959, disabled "flickering" when clicking buttons
git-svn-id: http://dev.vaadin.com/svn/addons/TouchKit@25668 de684a11-831f-0410-ab27-cb86445eb682

--- a/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
+++ b/vaadin-touchkit-agpl/src/main/java/com/vaadin/addon/touchkit/gwt/client/theme/touchkit.css
@@ -259,14 +259,16 @@ body e.v-app-loading {
 	padding: 3px;
 	text-align: center;
 	position:relative;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 .v-button:focus {
 	outline: none;
 }
 
-.v-button:active .v-button-wrap:after,
-.v-button.v-pressed .v-button-wrap:after {
+.v-button:active .v-button-wrap:after {
 	content:"";
 	position: absolute;
 	top:0;
@@ -280,8 +282,7 @@ body e.v-app-loading {
 	-webkit-user-select: none;
 }
 
-.v-button:active .v-button-wrap,
-.v-button.v-pressed .v-button-wrap {
+.v-button:active .v-button-wrap {
 	background-image: buttonActiveGradient;
 }
 
